fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
 * {
-    box-sizing: border-box;
-  }
-
-body {
-    margin: 0;
-    box-sizing: border-box;
-  }
-
-.flex-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border: 8px solid transparent;
-    padding: 15px;
-    border-image: url(img/border.png) 100 round;
+  box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+  align-items: center;
+  border: 8px solid transparent;
+  padding: 15px;
+  border-image: url(img/border.png) 100 round;
+}
 
 .img {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: center;
-    max-width: 100%;
-    height: auto;
-    gap: 10px;
-    padding: 10px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  height: auto;
+  gap: 10px;
+  width: 100%;
+  padding: 10px;
 }
 
 .container > div {
-    margin-right: 20px;
-    margin-left: 20px;
-    text-align: center;
+  margin-right: 20px;
+  margin-left: 20px;
+  text-align: center;
 }
 
 h1 {
@@ -71,48 +71,85 @@ h2 {
 }
 
 body {
-    background-image:  linear-gradient(30deg, #7CADE5 12%, transparent 12.5%, transparent 87%, #7CADE5 87.5%, #7CADE5), linear-gradient(150deg, #7CADE5 12%, transparent 12.5%, transparent 87%, #7CADE5 87.5%, #7CADE5), linear-gradient(30deg, #7CADE5 12%, transparent 12.5%, transparent 87%, #7CADE5 87.5%, #7CADE5), linear-gradient(150deg, #7CADE5 12%, transparent 12.5%, transparent 87%, #7CADE5 87.5%, #7CADE5), linear-gradient(60deg, #7CADE580 25%, transparent 25.5%, transparent 75%, #7CADE580 75%, #7CADE580), linear-gradient(60deg, #7CADE580 25%, transparent 25.5%, transparent 75%, #7CADE580 75%, #7CADE580);
-	background-size: 70px 122.5px;
-	background-position: 0 0, 0 0, 35px 61.25px, 35px 61.25px, 0 0, 35px 61.25px;
-	background-color: #90E4ED;
+  background-image: linear-gradient(30deg, #7cade5 12%, transparent 12.5%, transparent 87%, #7cade5 87.5%, #7cade5),
+    linear-gradient(150deg, #7cade5 12%, transparent 12.5%, transparent 87%, #7cade5 87.5%, #7cade5),
+    linear-gradient(30deg, #7cade5 12%, transparent 12.5%, transparent 87%, #7cade5 87.5%, #7cade5),
+    linear-gradient(150deg, #7cade5 12%, transparent 12.5%, transparent 87%, #7cade5 87.5%, #7cade5),
+    linear-gradient(60deg, #7cade580 25%, transparent 25.5%, transparent 75%, #7cade580 75%, #7cade580),
+    linear-gradient(60deg, #7cade580 25%, transparent 25.5%, transparent 75%, #7cade580 75%, #7cade580);
+  background-size: 70px 122.5px;
+  background-position: 0 0, 0 0, 35px 61.25px, 35px 61.25px, 0 0, 35px 61.25px;
+  background-color: #90e4ed;
 }
 #heart {
-    margin-top: 35px;
+  margin-top: 35px;
 }
 
 @keyframes title {
-    0% {color: rgb(55, 0, 255);}
-    25% {color: rgb(128, 10, 128);}
-    50% {color: rgb(183, 0, 255);}
-    75% {color: rgb(85, 10, 128);}
-    100% {color: rgb(55, 0, 255);}
+  0% {
+    color: rgb(55, 0, 255);
+  }
+  25% {
+    color: rgb(128, 10, 128);
+  }
+  50% {
+    color: rgb(183, 0, 255);
+  }
+  75% {
+    color: rgb(85, 10, 128);
+  }
+  100% {
+    color: rgb(55, 0, 255);
+  }
 }
 
 @keyframes sub-title {
-    0% {color: rgb(132, 65, 209);}
-    25% {color: rgb(165, 73, 165);}
-    50% {color: rgb(95, 57, 165);}
-    75% {color: rgb(85, 10, 128);}
-    100% {color: rgb(132, 65, 209);}
+  0% {
+    color: rgb(132, 65, 209);
+  }
+  25% {
+    color: rgb(165, 73, 165);
+  }
+  50% {
+    color: rgb(95, 57, 165);
+  }
+  75% {
+    color: rgb(85, 10, 128);
+  }
+  100% {
+    color: rgb(132, 65, 209);
+  }
 }
 
 @media (max-width: 800px) {
-    .flex-container {
-      flex-direction: column;
-      text-align: center
-    }
-  }  
-
-  @media (max-width: 800px) {
-    .img {
-      display: flex ;
-      flex-direction: column;
-      text-align: center
-    }
+  .flex-container { 
+    flex-direction: column; 
+    align-items: center;
   }
+  .img {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  h1 {
+    font-size: 40px;
+  }
+  .img > div > img {
+    max-width: 350px;;
+  }
+}
 
-  @keyframes move{
-    0% {color: rgb(55, 0, 255);}
-    5% {left:20px;}
+@media only screen and (min-width: 1800px) {
+  .img > div > img {
+    width: 500px;;
+  }
+}
 
+@keyframes move {
+  0% {
+    color: rgb(55, 0, 255);
+  }
+  5% {
+    left: 20px;
+  }
 }
